Tue Aug 26 14:43:10 2008  Akinori MUSHA  <knu@iDaemons.org>

	* enumerator.c: Activate Enumerator#with_object and add
	  Enumerable#each_with_object. [experimental]

Tue Aug 26 14:38:32 2008  Akinori MUSHA  <knu@iDaemons.org>

	* enumerator.c (enumerator_initialize),
	  test/ruby/test_enumerator.rb: Add an ability to generate an
	  enumerator from a block. [experimental] [ruby-dev:35903]

Tue Aug 26 13:25:25 2008  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* test/ruby/test_transcode.rb: added test_euc_jp
	  (contributed by Yoshihiro Kambayashi)

Tue Aug 26 11:54:15 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* test/cgi/test_cgi_tag_helper.rb: added by Takeyuki Fujioka.
	  [ruby-dev:35971]

Tue Aug 26 11:33:30 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/cgi.rb (nOE_element_def): fix error when cascade methods which
	  don't have arguments. Patch by Takeyuki Fujioka. [ruby-dev:35964]

	* lib/cgi.rb (blockquote): String#collect (this depends on
	  String#each) is no longer exists.
	  Patch by Takeyuki Fujioka. [ruby-dev:35946]

	* lib/cgi.rb (blockquote): ditto.

Tue Aug 26 03:06:48 2008  Tanaka Akira  <akr@fsij.org>

	* io.c (make_writeconv): copy invalid/undef flags.

Tue Aug 26 02:47:08 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* common.mk (dist): tool/make-snapshot is executable.

	* tool/make-snapshot (package): supported release numbers 1.9.0-x.

Tue Aug 26 02:43:50 2008  Tanaka Akira  <akr@fsij.org>

	* include/ruby/io.h (rb_io_t): new field: writeconv_pre_opts.

	* io.c (make_writeconv): initialize writeconv_pre_opts.
	  (io_fwrite): use writeconv_pre_opts.

Tue Aug 26 01:48:31 2008  Tanaka Akira  <akr@fsij.org>

	* io.c: test _WIN32 for CRLF platform.  (cygwin defines O_BINARY.)

Tue Aug 26 01:29:26 2008  Tanaka Akira  <akr@fsij.org>

	* io.c: force CRLF handling if RUBY_TEST_CRLF_ENVIRONMENT is defined.
	  This is only for testing.

Tue Aug 26 01:26:31 2008  Tanaka Akira  <akr@fsij.org>
